kustomize/base/app/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-app
spec:
  containers:
  - name: kaniko-app
    image: gcr.io/kaniko-project/executor:latest
    args:
    - "--context=$(CONTEXT)"
    - "--destination=$(DESTINATION)"
    - "--cache=true"
    - "--build-arg=NEXT_PUBLIC_CONFIG_BASE_URL=$(NEXT_PUBLIC_CONFIG_BASE_URL)"
    - "--build-arg=NEXT_PUBLIC_USER_SERVICE_APP_ID=$(NEXT_PUBLIC_USER_SERVICE_APP_ID)"
    - "--build-arg=NEXT_PUBLIC_USER_SERVICE_URL=$(NEXT_PUBLIC_USER_SERVICE_URL)"
    - "--build-arg=FUSIONAUTH_URL=$(FUSIONAUTH_URL)"
    - "--build-arg=FUSIONAUTH_KEY=$(FUSIONAUTH_KEY)"
    - "--build-arg=NEXT_PUBLIC_JWKS_URI=$(NEXT_PUBLIC_JWKS_URI)"
    - "--build-arg=NEXT_PUBLIC_WEATHER_API=$(NEXT_PUBLIC_WEATHER_API)"
    - "--build-arg=NEXT_PUBLIC_SHOW_ONBOARDING=$(NEXT_PUBLIC_SHOW_ONBOARDING)"
    - "--build-arg=NEXT_PUBLIC_ENTITY_DATASET_ID=$(NEXT_PUBLIC_ENTITY_DATASET_ID)"
    - "--build-arg=NEXT_PUBLIC_GOOGLE_KEY=$(NEXT_PUBLIC_GOOGLE_KEY)"
    - "--build-arg=NEXT_PUBLIC_DATASET_URL=$(NEXT_PUBLIC_DATASET_URL)"
    - "--build-arg=NEXT_PUBLIC_BOT_ID=$(NEXT_PUBLIC_BOT_ID)"
    - "--build-arg==NEXT_PUBLIC_ORG_ID$(NEXT_PUBLIC_ORG_ID)"
    - "--build-arg=NEXT_PUBLIC_SOCKET_PATH=$(NEXT_PUBLIC_SOCKET_PATH)"
    - "--build-arg=NEXT_PUBLIC_BFF_API_URL=$(NEXT_PUBLIC_BFF_API_URL)"
    - "--build-arg=NEXT_PUBLIC_AI_TOOLS_API=$(NEXT_PUBLIC_AI_TOOLS_API)"
    - "--build-arg=NEXT_PUBLIC_TELEMETRY_API=$(NEXT_PUBLIC_TELEMETRY_API)"
    - "--build-arg=NEXT_PUBLIC_SOCKET_URL=$(NEXT_PUBLIC_SOCKET_URL)"
    - "--build-arg=NEXT_PUBLIC_DEBUG=$(NEXT_PUBLIC_DEBUG)"
    - "--build-arg=NEXT_PUBLIC_BOT_NAME=$(old-kmai-dev)"
  restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: app
          image: registry.local/bharatsahaiyak/kisai-bot:IMAGE_TAG
          imagePullPolicy: Always
          name: app
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: kong
  rules:
  - host: "app.NAMESPACE.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 80
